--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>El <span>rojo</span> botones</h1>
+        <button id="test">CLick</button>
+        <script src="bundle.js"></script>
     </body>
 </html>
