--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <h1>El <span>rojo</span> botones</h1>
-        <button id="test">CLick</button>
+        <button id="reset">Reset</button>
+        <button id="animate">Animate</button>
         <script src="bundle.js"></script>
     </body>
 </html>
