--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,16 @@
         </div>
 
         <div id="buttons">
-            <div class="button" id="left-button"></div>
-            <div class="button" id="right-button"></div>
+            <div class="button" id="left-button">0</div>
+            <div class="button" id="right-button">0</div>
         </div>
-        <button id="reset">Reset</button>
+        <button id="reset">Start</button>
         <button id="animate">Animate</button>
 
-        <audio id="buzzer" src="buzzer.wav"></audio>
+        <code id="sentence"></code>
+
+        <audio id="buzzer-left" src="leftb.wav"></audio>
+        <audio id="buzzer-right" src="rightb.wav"></audio>
 
         <script src="bundle.js"></script>
     </body>
